plugins {
    id "java"
    id "idea"
}

version = '1.0'

idea.project {
    jdkName = '17'
    languageLevel = JavaVersion.VERSION_11
    vcs = 'Git'
}

allprojects {
    apply plugin: 'idea'

    group="mills"

    repositories {
        mavenCentral()
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    plugins.withType(JavaPlugin) {

        idea {
            module {
                outputDir file('build/idea/main')
                testOutputDir file('build/idea/test')
            }
        }

        dependencies {
            testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '+'
        }
    }
}

dependencies {
    implementation project(':core')
    implementation project(':index')
    implementation project(':scores')
}


